# mani

./: .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  LICENSE  README.md  fake.cpp
mani/: FunctionReference.h  Interpreter.h  Result.h  TableReference.h  ValueReference.h  mani.h
mani/details/: DefaultAllocatorPolicy.h  RegistryReference.h  StackGuard.h  default_stack_ops.h  mani_internal.h  thread_local.h
mani/details/functional_utils/: Apply.h  BinderProxy.h  DeduceSignature.h  Parameter.h  Signature.h  Upvalue.h
mani/details/impl/: FunctionReference.h  Interpreter.h  RegistryReference.h  Result.h  TableReference.h  ValueReference.h
mani/details/type_utils/: Base.h  Out.h  Traits.h  Tuple.h  TypeList.h
mani/reg/: Class.h  Constructor.h  Function.h  Method.h  Module.h  StaticMethod.h  reg.h
mani/reg/impl/: Constant.h  Enum.h  Function.h  Module.h  Property.h  TableUtils.h
tests/: CMakeLists.txt
tests/basics/: main.cpp
